# Confixer

./: .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml
src/confixer/: accessor.py  merge.py
src/confixer/sources/: base.py  env_source.py  json_source.py  toml_source.py  yaml_source.py
tests/: test_accessor.py  test_merge.py  test_sources.py
